@@ -63,6 +63,7 @@ Also introduces new `ServiceMethod` helper class to build AQL service call expre
 === Improvements
 
 - https://github.com/eclipse-syson/syson/issues/1620[#1620] [services] Handle short names in qualified names when direct editing.
+- https://github.com/eclipse-syson/syson/issues/1636[#1636] [export] Implement `OperationExpression` using operator 'meta'.
 
 === New features
 
